static/css/reviews.css
html,
body {
    margin: 0;
}

.top-image {
    background-size: cover;
    background-position: top;
    background-repeat: no-repeat;
    width: 100%;
    height: 400px;
    /* filter: blur(1px); */
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-top: 85px;
    padding-bottom: 30px;
}

.focus-box {
    background-color: rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    margin-left: 30px;
    /* background-color: rgba(0,0,0,0.1); */
    width: fit-content;
    margin-bottom: 15px;
    backdrop-filter: blur(2px);
    /* background-color: rgba(16, 26, 70, 0.8); */
    padding: 20px;
    padding-left: 40px;
    padding-right: 40px;
    border-radius: 7.5px;
    border: 2px solid rgba(0, 0, 0, 0.1);
}

.profile-img {
    width: 175px;
    height: 175px;
    background-size: cover;
    background-position: center;
    border-radius: 50%;
    border: 2px solid white;
}

.name-dept {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.name {
    font-family: sans-serif;
    font-weight: 800;
    font-size: 27.5px;
    /* font-family: 'STIX Two Math', serif; */
    color: white;
}

.dept {
    font-family: sans-serif;
    font-weight: 600;
    color: white;
    background-color: #f2e749;
    border-radius: 5px;
    width: fit-content;
    font-size: 15px;
    padding: 7.5px;
    height: fit-content;
    margin-left: 10px;
    display: none;
}

.rating-info {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: -15px;
}

.review-count {
    font-size: 13px;
    color: rgba(255, 255, 255, 0.6);
    font-family: sans-serif;
    font-style: italic;
    font-weight: 200;
    margin-top: 7.5px;
    margin-left: 7.5px;
}

.star-item {
    width: 15px;
    height: 15px;
}

.whatis {
    font-family: sans-serif;
    color: white;
    font-style: italic;
    font-size: 15px;
    margin-top: -20px;
    margin-bottom: 30px;
}

.top-reviews {
    display: flex;
    flex-direction: row;
    margin-top: 100px;
    justify-content: space-evenly;
}

.top-review {
    width: 400px;
    height: 175px;
    background-color: rgba(255, 255, 255, 0.035);
    border-radius: 0px;
    padding-right: 30px;
    padding-left: 30px;
    padding-top: 12.5px;
    padding-bottom: 15px;
    border-radius: 10px;
    box-shadow: 0px -5px 30px 0px rgba(0, 0, 0, 0.05);
}

.review-text {
    font-family: sans-serif;
    font-size: 16px;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.4);
    font-style: italic;
}

.review-title {
    font-family: sans-serif;
    font-weight: 600;
    font-size: 17.5px;
    opacity: 0.6;
    margin-bottom: -5px;
    margin-top: 20px;
}

.rtl {
    margin-top: 12.5px;
}

.top-rr {
    /* margin-left: 280px; */
    margin-top: 15px;
}

.gs {
    filter: grayscale(100%);
}

.new-review {
    background-color: rgba(0, 0, 0, 0.2);
    /* border: 2px solid rgba(255, 255, 255, 1); */
    width: 170px;
    height: 50px;
    margin-left: auto;
    margin-right: 35px;
    display: flex;
    align-items: center;
    cursor: pointer;
    border-radius: 7.5px;
    margin-bottom: -275px;
    backdrop-filter: blur(2px);
}

.pplus {
    width: 21px;
    height: 21px;
    opacity: 1;
    margin-left: 20px;
    filter: invert(95%);
}

.nr-text {
    font-size: 16px;
    font-family: sans-serif;
    font-weight: 500;
    margin-left: 12px;
    opacity: 0.85;
    border-radius: 4px;
    color: white;
}

.course-name {
    font-family: sans-serif;
    font-weight: 600;
    color: white;
    background-color: #f2e749;
    border-radius: 5px;
    width: fit-content;
    font-size: 15px;
    padding: 7.5px;
    height: fit-content;
    background-color: rgb(193, 71, 209);
    cursor: pointer;
    /* margin-left: auto; */
    /* margin-right: 30px; */
    margin-left: 20px;
    margin-bottom: 7.5px;
}

.tr-row {
    display: flex;
    flex-direction: row;
}

.review-control {
    display: flex;
    margin-top: 50px;
    align-items: center;
    padding-left: 15px;
    justify-content: space-evenly;
}

.nice-select {
    font-family: sans-serif !important;
    font-weight: 300;
}

.select-sort {
    margin-left: auto;
    margin-right: 25px;
    margin-left: 30px;
}

label {
    font-family: sans-serif;
    font-weight: 400 !important;
    color: rgba(0, 0, 0, 0.7);
}

.fs {
    flex: 0.6;
}

.fs2 {
    margin-left: 20px;
}

.fs3 {
    flex: 0.3;
}

.review-object {
    width: 80%;
    margin-left: 50px;
    margin-top: 50px;
}

.review-para * {
    font-family: sans-serif;
    font-weight: 400;
    opacity: 0.5;
}

.cnl {
    font-size: 12px;
    margin-top: 13.5px;
    margin-bottom: 0px;
    margin-left: 12.5px;
    opacity: 0.85;
}

.rol {
    margin-top: 60px;
}

.tmo {
    margin-top: -5px;
}

.date-posted {
    font-family: sans-serif;
    font-weight: 100;
    font-size: 12px;
    opacity: 0.2;
    margin-top: -2.5px;
}

.all-reviews {
    margin-bottom: 60px;
}

.dpt {
    margin-top: 7.5px;
}

.hide {
    opacity: 0;
}

.pi {
    margin-top: 15px;
}

.sa {
    text-align: center;
    font-family: sans-serif;
    font-weight: 300;
    font-size: 20px;
}

.sa-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 100px;
    width: 100%;
    justify-content: center;
    margin-bottom: 30px;
}

.sa-left,
.sa-right {
    width: 110px;
    height: 1px;
    background-color: rgba(0, 0, 0, 0.8);
}

.sa-left {
    margin-right: 30px;
}

.sa-right {
    margin-left: 30px;
}

.tr-img {
    width: 75px;
    height: 75px;
    border-radius: 50%;
}

.tr-name {
    font-family: sans-serif;
    font-weight: 400;
    font-size: 17px;
}

.sa-rating-info {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.sa-review-count {
    font-size: 13px;
    color: rgba(0, 0, 0, 0.3);
    font-family: sans-serif;
    font-style: italic;
    font-weight: 200;
    margin-top: -1.5px;
    margin-left: 7.5px;
}

.sa-rating-row {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 100px;
    /* margin-left: -40px; */
    margin-top: -10px;
}

.top-result {
    display: flex !important;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    height: 200px;
    margin-bottom: -50px;
}

.slick-dots {
    display: none;
}

.missing {
    width: 400px;
}

.m-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.nr {
    text-align: center;
    color: rgb(185, 206, 247);
    font-family: sans-serif;
    font-size: 40px;
    font-weight: 500;
    margin-top: 80px;
}

.war {
    background-color: rgb(185, 206, 247);
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
    color: white;
    font-family: sans-serif;
    border: none;
    outline: none;
    cursor: pointer;
    border-radius: 5px;
    font-size: 15px;
    margin-bottom: 100px;
}

.mdtop {
    margin-top: 100px;
    margin-bottom: -100px;
    /* margin-left: 30px; */
    padding-left: 25px;
    /* box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.025); */
    padding-bottom: 20px;
}

#pick-items {
    margin-left: -25px;
}

.slick-track {
    float: left !important;
    margin-left: 0 !important;
}

.bounce {
    background-color: rgb(76, 77, 220);
    width: 80%;
    height: 10px;
    position: absolute;
    margin-top: auto;
    margin-bottom: -40px;
    left: -80%;
    border-radius: 5px;
    animation: border 1s ease-out 3;
}

.bt {
    left: 0%;
}

@keyframes border {
    to {
        left: 40%;
        opacity: 0;
    }
}

.word-cloud {
    height: 220px;
    padding-top: 50px;
    padding-bottom: 30px;
    margin-bottom: 40px;
}

.wci {
    color: rgb(76, 77, 220);
    font-family: 'Courgette', cursive;
    font-weight: 700;
    font-size: 80px;
    position: absolute;
    margin-top: 130px;
}

.w2 {
    font-size: 50px;
    margin-left: 300px;
    margin-top: 30px;
}

.w3 {
    font-size: 20px;
}

